[gd_scene load_steps=15 format=3 uid="uid://bpklmymnqripg"]

[ext_resource type="Script" uid="uid://b4hho3q7h3yh3" path="res://main.gd" id="1_lquwl"]
[ext_resource type="Shader" uid="uid://dsnkyljauj5mx" path="res://Water.gdshader" id="2_4c57u"]
[ext_resource type="Script" uid="uid://fnax5kbopsvp" path="res://addons/sky_3d/src/Sky3D.gd" id="3_efxa6"]
[ext_resource type="Script" uid="uid://66au4cnjnpbw" path="res://addons/sky_3d/src/Skydome.gd" id="4_dg77c"]
[ext_resource type="Script" uid="uid://5c8dx3cahlay" path="res://addons/sky_3d/src/TimeOfDay.gd" id="5_ycdy4"]
[ext_resource type="PackedScene" uid="uid://d1iyotkbyhnbo" path="res://ship_tscn/player_ship.tscn" id="6_5vw27"]
[ext_resource type="PackedScene" uid="uid://ciqtl77xpm1e" path="res://ship_tscn/cargo_ship.tscn" id="10_4c57u"]
[ext_resource type="Script" uid="uid://ibvjr7q3x7br" path="res://key_indicator.gd" id="11_efxa6"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_4c57u"]
render_priority = 0
shader = ExtResource("2_4c57u")
shader_parameter/wave_a = Vector3(1, 0.4, 10)
shader_parameter/wave_a_dir = Vector2(1, 0)
shader_parameter/wave_b = Vector3(1, 0.25, 20)
shader_parameter/wave_b_dir = Vector2(1, 1)
shader_parameter/wave_c = Vector3(1, 0.15, 1)
shader_parameter/wave_c_dir = Vector2(1, 0.5)
shader_parameter/time = 0.0
shader_parameter/height_scale = 1.0
shader_parameter/beer_factor = 0.8
shader_parameter/_DepthGradientShallow = Color(0.325, 0.807, 0.971, 0.725)
shader_parameter/_DepthGradientDeep = Color(0.086, 0.407, 1, 0.749)
shader_parameter/_DepthMaxDistance = 1.0
shader_parameter/_DepthFactor = 1.0

[sub_resource type="PlaneMesh" id="PlaneMesh_efxa6"]
material = SubResource("ShaderMaterial_4c57u")
size = Vector2(1000, 1000)
subdivide_width = 100
subdivide_depth = 100

[sub_resource type="PhysicalSkyMaterial" id="PhysicalSkyMaterial_4c57u"]
use_debanding = false

[sub_resource type="Sky" id="Sky_efxa6"]
sky_material = SubResource("PhysicalSkyMaterial_4c57u")

[sub_resource type="Environment" id="Environment_dg77c"]
background_mode = 2
sky = SubResource("Sky_efxa6")
ambient_light_source = 3
ambient_light_color = Color(1, 1, 1, 1)
reflected_light_source = 2
tonemap_mode = 3
tonemap_white = 6.0

[sub_resource type="CameraAttributesPractical" id="CameraAttributesPractical_ycdy4"]

[node name="Main" type="Node3D"]
script = ExtResource("1_lquwl")

[node name="SkyManager" type="Node3D" parent="."]

[node name="Water" type="MeshInstance3D" parent="."]
mesh = SubResource("PlaneMesh_efxa6")

[node name="Sky3D" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_dg77c")
camera_attributes = SubResource("CameraAttributesPractical_ycdy4")
script = ExtResource("3_efxa6")
current_time = 13.303
minutes_per_day = 1.0
metadata/_custom_type_script = "uid://fnax5kbopsvp"

[node name="SunLight" type="DirectionalLight3D" parent="Sky3D"]
transform = Transform3D(0, -0.899646, -0.436621, 0.489878, -0.380642, 0.784303, -0.871791, -0.213891, 0.440716, -0.43662, 0.784303, 0.440716)
shadow_enabled = true

[node name="MoonLight" type="DirectionalLight3D" parent="Sky3D"]
transform = Transform3D(0, -0.466283, -0.884636, 0.999993, 0.00324882, -0.00171242, 0.0036725, -0.88463, 0.46628, -0.884636, -0.00171232, 0.46628)
light_color = Color(0.572549, 0.776471, 0.956863, 1)
light_energy = 0.0
shadow_enabled = true

[node name="Skydome" type="Node" parent="Sky3D"]
script = ExtResource("4_dg77c")
sky_visible = true
dome_radius = 10.0
tonemap_level = 0.0
exposure = 1.3
ground_color = Color(0.3, 0.3, 0.3, 1)
sky_layers = 4
sky_render_priority = -128
horizon_level = 0.0
sun_altitude = -38.3437
sun_azimuth = -224.732
sun_disk_color = Color(0.996094, 0.541334, 0.140076, 1)
sun_disk_intensity = 2.0
sun_disk_size = 0.015
sun_light_path = NodePath("../SunLight")
sun_light_color = Color(1, 1, 1, 1)
sun_horizon_light_color = Color(0.98, 0.523, 0.294, 1)
sun_light_energy = 1.0
moon_altitude = -61.6921
moon_azimuth = -130.99
moon_color = Color(1, 1, 1, 1)
moon_size = 0.07
enable_set_moon_texture = false
moon_resolution = 2
moon_light_path = NodePath("../MoonLight")
moon_light_color = Color(0.572549, 0.776471, 0.956863, 1)
moon_light_energy = 0.3
deep_space_euler = Vector3(1.29154, 3.14159, 2.21058)
background_color = Color(0.709804, 0.709804, 0.709804, 0.854902)
set_background_texture = false
stars_field_color = Color(1, 1, 1, 1)
set_stars_field_texture = false
stars_scintillation = 0.75
stars_scintillation_speed = 0.01
atm_quality = 1
atm_wavelenghts = Vector3(680, 550, 440)
atm_darkness = 0.5
atm_sun_intensity = 18.0
atm_day_tint = Color(0.807843, 0.909804, 1, 1)
atm_horizon_light_tint = Color(0.980392, 0.635294, 0.462745, 1)
atm_enable_moon_scatter_mode = false
atm_night_tint = Color(0.168627, 0.2, 0.25098, 1)
atm_level_params = Vector3(1, 0, 0)
atm_thickness = 0.7
atm_mie = 0.07
atm_turbidity = 0.001
atm_sun_mie_tint = Color(1, 1, 1, 1)
atm_sun_mie_intensity = 1.0
atm_sun_mie_anisotropy = 0.8
atm_moon_mie_tint = Color(0.137255, 0.184314, 0.292196, 1)
atm_moon_mie_intensity = 0.7
atm_moon_mie_anisotropy = 0.8
fog_visible = true
fog_atm_level_params_offset = Vector3(0, 0, -1)
fog_density = 0.00015
fog_rayleigh_depth = 0.116
fog_mie_depth = 0.0001
fog_falloff = 3.0
fog_start = 0.0
fog_end = 1000.0
fog_layers = 524288
fog_render_priority = 123
clouds_thickness = 1.7
clouds_coverage = 0.5
clouds_absorption = 2.0
clouds_sky_tint_fade = 0.5
clouds_intensity = 10.0
clouds_size = 2.0
clouds_uv = Vector2(0.16, 0.11)
clouds_direction = Vector2(0.25, 0.25)
clouds_speed = 0.07
set_clouds_texture = false
clouds_cumulus_visible = true
clouds_cumulus_day_color = Color(0.823529, 0.87451, 1, 1)
clouds_cumulus_horizon_light_color = Color(0.98, 0.43, 0.15, 1)
clouds_cumulus_night_color = Color(0.090196, 0.094118, 0.129412, 1)
clouds_cumulus_thickness = 0.0243
clouds_cumulus_coverage = 0.55
clouds_cumulus_absorption = 2.0
clouds_cumulus_noise_freq = 2.7
clouds_cumulus_intensity = 1.0
clouds_cumulus_mie_intensity = 1.0
clouds_cumulus_mie_anisotropy = 0.206
clouds_cumulus_size = 0.5
clouds_cumulus_direction = Vector3(0.25, 0.1, 0.25)
clouds_cumulus_speed = 0.05
set_clouds_cumulus_texture = false
environment = SubResource("Environment_dg77c")

[node name="TimeOfDay" type="Node" parent="Sky3D"]
script = ExtResource("5_ycdy4")
dome_path = NodePath("../Skydome")
system_sync = false
total_cycle_in_minutes = 1.0
total_hours = 13.303
day = 25
month = 10
year = 2027
celestials_calculations = 1
compute_moon_coords = true
compute_deep_space_coords = true
latitude = 16.0
longitude = 108.0
utc = 7.0

[node name="PlayerShip" parent="." instance=ExtResource("6_5vw27")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 130)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Player_ship_name_label" type="Label" parent="CanvasLayer"]
offset_right = 40.0
offset_bottom = 25.0
text = "玩家"
vertical_alignment = 1

[node name="Position_label" type="Label" parent="CanvasLayer"]
offset_top = 25.0
offset_right = 149.0
offset_bottom = 50.0
text = "座標: X = 0.0, Z = 0.0"
vertical_alignment = 1

[node name="Speed_label" type="Label" parent="CanvasLayer"]
offset_top = 50.0
offset_right = 102.0
offset_bottom = 75.0
text = "速度: 0.00 節"
vertical_alignment = 1

[node name="Angle_speed_label" type="Label" parent="CanvasLayer"]
offset_top = 75.0
offset_right = 138.0
offset_bottom = 100.0
text = "轉向率: 0.0 弧度/秒"
vertical_alignment = 1

[node name="Angle_label" type="Label" parent="CanvasLayer"]
offset_top = 100.0
offset_right = 116.0
offset_bottom = 125.0
text = "朝向角度: 0.0 度"
vertical_alignment = 1

[node name="Time_label" type="Label" parent="CanvasLayer"]
offset_left = 600.0
offset_right = 640.0
offset_bottom = 25.0

[node name="Test_label" type="Label" parent="CanvasLayer"]
offset_left = 300.0
offset_right = 340.0
offset_bottom = 23.0

[node name="KeyIndicator" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 0
offset_right = 75.0
offset_bottom = 50.0
script = ExtResource("11_efxa6")

[node name="W_label" type="Label" parent="CanvasLayer/KeyIndicator"]
layout_mode = 2
offset_left = 25.0
offset_top = 125.0
offset_right = 50.0
offset_bottom = 150.0
text = "W"
horizontal_alignment = 1
vertical_alignment = 1

[node name="A_label" type="Label" parent="CanvasLayer/KeyIndicator"]
layout_mode = 2
offset_top = 150.0
offset_right = 25.0
offset_bottom = 175.0
text = "A"
horizontal_alignment = 1
vertical_alignment = 1

[node name="S_label" type="Label" parent="CanvasLayer/KeyIndicator"]
layout_mode = 2
offset_left = 25.0
offset_top = 150.0
offset_right = 50.0
offset_bottom = 175.0
text = "S"
horizontal_alignment = 1
vertical_alignment = 1

[node name="D_label" type="Label" parent="CanvasLayer/KeyIndicator"]
layout_mode = 2
offset_left = 50.0
offset_top = 150.0
offset_right = 75.0
offset_bottom = 175.0
text = "D"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VSlider" type="VSlider" parent="CanvasLayer"]
offset_left = 1183.0
offset_top = 364.0
offset_right = 1255.0
offset_bottom = 685.0

[node name="Cargo_ship" parent="." instance=ExtResource("10_4c57u")]
